[project]
name = "ar-marker"
version = "0.1.0"
description = "Add your description here"
dependencies = [
    "opencv-python>=4.9.0.80",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/ar_marker"]

[tool.ruff]
line-length = 119