[project]
name = "ar-marker"
version = "0.1.0"
description = "Add your description here"
dependencies = [
    "opencv-python>=4.9.0.80",
    "pypylon>=3.0.1",
    "pupil-apriltags>=1.0.4.post10",
    "pillow>=10.3.0",
    "ffmpeg-python>=0.2.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/ar_marker"]

[tool.ruff]
line-length = 119
